# WUW_appchain_madara

./: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: chain_spec.rs  service.rs
crates/pallets/oracle/: Cargo.toml
crates/pallets/oracle/src/: lib.rs  oracle.rs  tests.rs
crates/pallets/orderbook/: Cargo.toml
crates/pallets/orderbook/src/: lib.rs  runtime.rs  tests.rs
crates/pallets/wuw/: Cargo.toml
crates/pallets/wuw/src/: lib.rs  runtime.rs  tests.rs  weights.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  pallets.rs  tests.rs
