[package]
name = "pallet-oracle"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT-0"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lite-json = { version = "0.2.0", default-features = false }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "rustls-tls",
] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

# Substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Substrate primitives
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-keystore = {  workspace = true ,  optional = true  }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]